# betterschool-rs

./: .env  .gitignore  Cargo.toml  README.md  betterschool.sqlite
migrations/2022-07-23-043139_create_users/: up.sql
src/: main.rs
src/error/: mod.rs
src/form/: mod.rs
src/model/: homework_model.rs  mod.rs  school_model.rs  user_model.rs
src/view/: main_view.rs  mod.rs
