[package]
name = "betterschool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.12"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
dotenv = "0.15.0"
sea-orm = { version = "0.9.0", features=["sqlx-sqlite", "runtime-tokio", "mock", "macros"] }
tower = "0.4.13"