[package]
name = "betterschool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.12"
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
dotenv = "0.15.0"
tower = "0.4.13"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
nanoid = "0.4.0"